# graph_core

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  deps.repos  download_deps.sh  fossa-deps.yml  human_aware.rosinstall  log.txt  logger.yaml  merge  net_description.docx  readme.md
dgaco_planner/: CMakeLists.txt  package.xml  plugin.xml
dgaco_planner/include/dgaco_planner/: dgaco_planner.h  dgaco_planner_manager.h
dgaco_planner/src/dgaco_planner/: dgaco_planner.cpp  dgaco_planner_manager.cpp
dirrt_star/: CMakeLists.txt  CMakeLists.txt.user.OSFpZS  package.xml  plugin.xml  readme.md
dirrt_star/config/: dirrt_planning.yaml
dirrt_star/include/dirrt_star/: dirrt_star_planner.h  dirrt_star_planner_manager.h  hamp_time_planner.h  multigoal_planner.h  probabilist_hamp_time_planner.h  time_planner.h
dirrt_star/launch/: dirrt_planning_pipeline.launch.xml  multiple_planning_pipeline.launch.xml
dirrt_star/scripts/: performance_reader.py
dirrt_star/src/dirrt_star/: dirrt_star_planner.cpp  dirrt_star_planner_manager.cpp  hamp_time_planner.cpp  multigoal_planner.cpp  probabilist_hamp_time_planner.cpp  shareworkmanipulator_worldopen_tip_5000_1,000000_1,000000.ikcache  time_planner.cpp
graph_core/: .clang-format  CMakeLists.txt  graph_coreConfig.cmake.in  package.xml
graph_core/cmake_config/: Dependencies.cmake  Dependencies_catkin.cmake  FixInstallationPath.cmake  clang_format_target.sh  graph_coreConfig.cmake  graph_coreConfig.cmake.in  graph_coreConfigOLD.cmake
graph_core/config/: binary_logger_cfg.yaml  high_dof.yaml  high_dof_config.yaml  narrow_pass.yaml  narrow_pass1.yaml  narrow_pass2.yaml  narrow_pass3.yaml  narrow_pass4.yaml  narrow_pass5.yaml  narrow_pass6.yaml  narrow_pass7.yaml  narrow_pass8.yaml  narrow_pass_gen.yaml  object_test_replanner.yaml  static_scene_panda.yaml  test_moveit.yaml  test_online_replanner_6dof.yaml  test_online_replanner_cartesian.yaml  test_online_replanner_panda.yaml  test_projection.yaml  test_replanner_cartesian.yaml
graph_core/include/graph_core/: avoidance_goal_cost_function.h  avoidance_metrics.h  avoidance_metrics.h.autosave  avoidance_probabilistic_time_metrics.h  avoidance_time_metrics.h  boxes_checker.h  collision_checker.h  collision_checker_base.h  connection.h  cube_3d_collision_checker.h  goal_cost_function.h  graph.h  graph_core.h  informed_sampler.h  length_penalty_metrics.h  local_informed_sampler.h  log.h  metrics.h  moveit_collision_checker.h  narrow_pass_checker.h  node.h  (+25 more)
graph_core/launch/: binary_logger.launch  high_dof.launch  narrow_pass.launch  prova_graph.launch  replanner_test_with_moving_obstacle.launch  test_online_replanner.launch  test_online_replanner_6dof.launch  test_online_replanner_cartesian.launch  test_online_replanner_panda.launch  test_path_validity.launch  test_projection.launch  test_replanner_cartesian.launch  test_replanner_panda.launch  test_replanner_with_moving_obstacle.launch  test_replanner_with_moving_obstacle_cartesian.launch
graph_core/script/: analyze_test.m  graph_dirrt.m  load_dirrt_results.m  load_narrow_pass.m  load_narrow_pass.py
graph_core/tests/: CMakeLists.txt  compute_path_test.cpp  goal_selection_test_node.cpp  graph_core_tests_params.yaml  graph_test.cpp  highdof_test.cpp  kdtree_test.cpp  logger_param.yaml  logger_param.yml  logger_param_gtest.yaml  narrow_pass_test.cpp  narrow_pass_test1.cpp  node_connection_test.cpp  path.yaml  path_post_processing_test.cpp  plot_goal_selection.py  prova_graph.cpp  run_all_tests.cpp  test_AnytimeRRT.cpp  test_collision.cpp  test_precomputing_tree.cpp  test_subtree.cpp
graph_net/: CMakeLists.txt  package.xml
graph_net/config/: config.yaml
graph_net/launch/: test.launch
graph_net/tests/: test_net.cpp
graph_replanning/: CMakeLists.txt  package.xml
graph_replanning/config/: object_test_replanner.yaml  static_scene_6dof.yaml  static_scene_collision_check_6dof.yaml  static_scene_collision_check_sharework.yaml  static_scene_collision_check_ur10e.yaml  static_scene_sharework.yaml  static_scene_ur10e.yaml  test_collision_check_6dof.yaml  test_collision_check_sharework.yaml  test_collision_check_ur10e.yaml  test_collision_check_ur10e_robotiq.yaml  test_online_replanner_panda.yaml  test_replanner_cartesian.yaml  test_replanner_manager_6dof.yaml  test_replanner_manager_cartesian.yaml  test_replanner_manager_sharework.yaml  test_replanner_manager_sharework_simplified.yaml  test_replanner_manager_ur10e.yaml  test_replanner_manager_ur10e_robotiq.yaml  test_replanner_panda.yaml  test_replanner_sharework.yaml  test_replanner_ur10e.yaml  test_replanner_ur10e_robotiq.yaml  test_replanner_ur10e_simplified.yaml
graph_replanning/launch/: binary_logger.launch  test_collision_check_6dof.launch  test_collision_check_sharework.launch  test_collision_check_sharework_simplified.launch  test_collision_check_ur10e.launch  test_collision_check_ur10e_robotiq.launch  test_collision_check_ur10e_robotiq_simplified.launch  test_collision_check_ur10e_simplified.launch  test_online_replanner_6dof.launch  test_online_replanner_cartesian.launch  test_online_replanner_panda.launch  test_replanner_cartesian.launch  test_replanner_manager_6dof.launch  test_replanner_manager_cartesian.launch  test_replanner_manager_sharework_simplified.launch  test_replanner_manager_ur10e.launch  test_replanner_manager_ur10e_robotiq_simplified.launch  test_replanner_manager_ur10e_simplified.launch  test_replanner_panda.launch  test_replanner_sharework.launch  test_replanner_sharework_simplified.launch  test_replanner_ur10e.launch  test_replanner_ur10e_robotiq_simplified.launch  test_replanner_ur10e_simplified.launch
human_probablistic_occupancy/: CMakeLists.txt  package.xml
human_probablistic_occupancy/config/: occupancy.yaml  simulate.yaml  test.yaml
human_probablistic_occupancy/src/: human_probablistic_occupancy_node.cpp  simulate_occupancy.cpp  test_point.cpp
net_path_core/: CMakeLists.txt  package.xml
net_path_core/src/: test.cpp  test_tree.cpp
test_occupancy/: CMakeLists.txt  package.xml
test_occupancy/src/: test_occupancy_node.cpp
(+224 files in other folders)
