<?xml version="2.0"?>
<package format="3">
  <name>graph_core</name>
  <version>0.0.0</version>
  <description>The graph_core package</description>

  <maintainer email="cesare.tonola@unibs.it">Cesare Tonola</maintainer>
  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <maintainer email="marco.faroni@polimi.it">Marco Faroni</maintainer>

  <license>BSD-3-Clause</license>

  <author email="cesare.tonola@unibs.it">Cesare Tonola</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>eigen3</depend>
  <depend>cnr_param</depend>
  <depend>cnr_logger</depend>
  <depend>cnr_class_loader</depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
